--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </button>
         <ul class="mobile-menu">
           <li class="item">
-            <a href="./index.html" class="mobile-menu-header link">Studio</a>
+            <a href="./index.html" class="mobile-menu-header active link">Studio</a>
           </li>
           <li class="item">
             <a href="./portfolio.html" class="mobile-menu-header link"
