--- a/portfolio.html
+++ b/portfolio.html
@@ -23,25 +23,27 @@
       <div class="container header-container">
         <nav class="page-nav">
           <a class="logo-type link" href="./index.html"
-            >Web<span class="logo">Studio</span></a>
-
+            >Web<span class="logo">Studio</span></a
+          >
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link " href="./index.html"
+              <a class="header-link link" href="./index.html"
                 >Studio
               </a>
             </li>
-
             <li class="header-item">
               <a class="header-link link header-link-after" href="./portfolio.html">Portfolio</a>
             </li>
-
             <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
-        <button type="button" class="mobile-menu-open js-open-menu" aria-expanded="false" aria-expanded="mobile-menu">
+        <button
+          type="button"
+          class="mobile-menu-open js-open-menu"
+          aria-expanded="false"
+        >
           <svg class="mobile-menu-open-icon" width="32" height="22">
             <use href="./images/icons.svg#icon-hamburger"></use>
           </svg>
@@ -50,28 +52,34 @@
           <ul class="contact list">
             <li class="contact-item">
               <a class="header-address link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a>
+                >info@devstudio.com</a
+              >
             </li>
-
             <li class="contact-item">
               <a class="header-address link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a>
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
       </div>
-      <div class="mobile-menu-close-container js-menu-container" id="mobile-menu">
-          <button class="mobile-menu-close-btn js-close-menu">
+      <div
+        class="mobile-menu-close-container js-menu-container"
+        id="mobile-menu"
+      >
+        <button class="mobile-menu-close-btn js-close-menu">
           <svg class="mobile-menu-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
         <ul class="mobile-menu">
           <li class="item">
-            <a href="./index.html" class="mobile-menu-header link">Studio</a>
+            <a href="./index.html" class="mobile-menu-header  link">Studio</a>
           </li>
           <li class="item">
-            <a href="./portfolio.html" class="mobile-menu-header link">Portfolio</a>
+            <a href="./portfolio.html" class="mobile-menu-header active link"
+              >Portfolio</a
+            >
           </li>
           <li class="item">
             <a href="" class="mobile-menu-header link">Contacts</a>
@@ -79,51 +87,52 @@
         </ul>
         <div>
           <address class="mobile-menu-address">
-          <ul class="mobile-menu-contacs list">
-            <li class="item">
-              <a href="tel:+110001111111" class="mobile-menu-contacs-tel link">+11 (000) 111-11-11</a>
+            <ul class="mobile-menu-contacs list">
+              <li class="item">
+                <a href="tel:+110001111111" class="mobile-menu-contacs-tel link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="mobile-menu-contacs-mail link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="mobile-menu-socials list">
+            <li class="mobile-menu-socials-list">
+              <a class="mobile-menu-socials-link">
+                <svg class="mobile-menu-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="mobile-menu-contacs-mail link">info@devstudio.com</a>
+            <li class="mobile-menu-socials-list">
+              <a class="mobile-menu-socials-link">
+                <svg class="mobile-menu-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-socials-list">
+              <a class="mobile-menu-socials-link">
+                <svg class="mobile-menu-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-socials-list">
+              <a class="mobile-menu-socials-link">
+                <svg class="mobile-menu-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-        <ul class="mobile-menu-socials list">
-          <li class="mobile-menu-socials-list">
-            <a class="mobile-menu-socials-link">
-              <svg class="mobile-menu-socials-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li class="mobile-menu-socials-list">
-            <a class="mobile-menu-socials-link">
-              <svg class="mobile-menu-socials-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li class="mobile-menu-socials-list">
-            <a class="mobile-menu-socials-link">
-              <svg class="mobile-menu-socials-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li class="mobile-menu-socials-list">
-            <a class="mobile-menu-socials-link">
-              <svg class="mobile-menu-socials-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-        
+        </div>
       </div>
     </header>
 
@@ -446,6 +455,12 @@
         </div>
       </div>
     </footer>
-
+    <script src="./js/mobile-menu.js"></script>
+    <script
+      defer=""
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
